oc/05-template/030-Deployement.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app
  template:
    metadata:
      labels:
        app: html-openshift-app
    spec:
      containers:
      - name: html-openshift-app
        image: 
          ghcr.io/laurens-hertzer/html-openshift-app:v1
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: 
          limits:
            cpu: '2'
            memory: 200Mi
          requests:
            cpu: '1'
            memory: 100Mi
        imagePullPolicy: Always
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app-database
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app-database
  template:
    metadata:
      labels:
        app: html-openshift-app-database
    spec:
      volumes:
      - name: html-openshift-app-database-data
        persistentVolumeClaim:
          claimName: html-openshift-app-database-data
      containers:
      - name: html-openshift-app-database
        resources: {}
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: html-openshift-app-database-data
          mountPath: /var/lib/pgsql/data
        image: 'registry.redhat.io/rhel8/postgresql-15:latest'
        imagePullPolicy: Always


#change name
label app
label part of


image ändern

containerport ändern
